syntax = "proto3";

package pb;

import "customer/appointment.proto";
import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/customer";


message CreateAppointmentRequest{
    string barbershop_id = 1;
    string customer_id = 2;
    string barber_id = 3;
    repeated string service_id = 4;
    google.protobuf.Timestamp appointment_datetime = 5;
    int32 status = 6;
    int32 timer = 7;
}

message CreateAppointmentResponse {
    Appointment appointment = 1;
}